--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,19 @@
 
         </dependencies>
     </dependencyManagement>
-
+         <repositories>  
+                 <repository>  
+                     <id>alimaven</id>  
+                     <name>aliyun maven</name>  
+                     <url>http://maven.aliyun.com/nexus/content/groups/public/</url>  
+                     <releases>  
+                         <enabled>true</enabled>  
+                     </releases>  
+                     <snapshots>  
+                         <enabled>false</enabled>  
+                     </snapshots>  
+                 </repository>  
+         </repositories>  
 
     <!-- 这里是为了发布到MAVEN中央仓库所做的配置 -->
     <distributionManagement>
